--- a/faiktribunu/Tab Bar/Bildirim/BildirimViewController.xib
+++ b/faiktribunu/Tab Bar/Bildirim/BildirimViewController.xib
@@ -21,20 +21,37 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <tableView clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="UYe-Sv-tvQ">
-                    <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                    <rect key="frame" x="0.0" y="40" width="375" height="627"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <connections>
                         <outlet property="dataSource" destination="-1" id="WOe-G3-uWa"/>
                         <outlet property="delegate" destination="-1" id="LQc-6q-9UE"/>
                     </connections>
                 </tableView>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5dD-pv-wBR">
+                    <rect key="frame" x="0.0" y="0.0" width="375" height="40"/>
+                    <color key="backgroundColor" red="1" green="0.0" blue="0.011644906383057929" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="40" id="yJp-P5-xFo"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                    <state key="normal" title="BİLDİRİMLERİ TEMİZLE">
+                        <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </state>
+                    <connections>
+                        <action selector="temizle:" destination="-1" eventType="touchUpInside" id="Vpz-Pk-KY2"/>
+                    </connections>
+                </button>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstItem="UYe-Sv-tvQ" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="eTC-2G-WlB"/>
-                <constraint firstItem="UYe-Sv-tvQ" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="nLs-Ag-dr4"/>
-                <constraint firstItem="UYe-Sv-tvQ" firstAttribute="bottom" secondItem="i5M-Pr-FkT" secondAttribute="bottom" id="q3b-Pb-ara"/>
-                <constraint firstItem="UYe-Sv-tvQ" firstAttribute="trailing" secondItem="i5M-Pr-FkT" secondAttribute="trailing" id="zw0-a5-CZh"/>
+                <constraint firstItem="UYe-Sv-tvQ" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="40" id="7In-ST-euS"/>
+                <constraint firstItem="5dD-pv-wBR" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="LXb-85-gMk"/>
+                <constraint firstAttribute="trailing" secondItem="5dD-pv-wBR" secondAttribute="trailing" id="LaX-66-nJc"/>
+                <constraint firstItem="UYe-Sv-tvQ" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="SMP-Tv-lQA"/>
+                <constraint firstAttribute="trailing" secondItem="UYe-Sv-tvQ" secondAttribute="trailing" id="Uft-ER-4Qv"/>
+                <constraint firstItem="5dD-pv-wBR" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="VB7-Vi-JA6"/>
+                <constraint firstAttribute="bottom" secondItem="UYe-Sv-tvQ" secondAttribute="bottom" id="acw-qC-40N"/>
             </constraints>
             <point key="canvasLocation" x="31.5" y="101.5"/>
         </view>
